# Security-Control-Drift-Misconfiguration-Detection-Across-Enterprise-Systems

./: README.md  render.yaml
secure_baseline_updated/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  render.yaml
secure_baseline_updated/.agents/memory/: MEMORY.md  sentineldna-backend.md  sentineldna-normalizers.md
secure_baseline_updated/backend/: requirements.txt
secure_baseline_updated/backend/attack_graph/: graph_builder.py
secure_baseline_updated/backend/baseline/: baseline_engine.py
secure_baseline_updated/backend/detection_engine/: drift_object_generator.py  pipeline.py
secure_baseline_updated/backend/intelligence_engine/: business_impact.py  counterfactual_engine.py  credit_score.py  deep_forensics.py  run_all.py
secure_baseline_updated/backend/ontology/: semantic_ontology.py
secure_baseline_updated/backend/remediation/: auto_healer.py
secure_baseline_updated/backend/rules/: suppression.py
secure_baseline_updated/backend/trust/: trust_engine.py
secure_baseline_updated/backend/ttl/: ttl_engine.py
secure_baseline_updated/datasets/: baseline.json  sample_drifts.json  topology.json
secure_baseline_updated/frontend/web/: .env.example  README.md  index.html  package-lock.json  package.json
secure_baseline_updated/frontend/web/src/: App.jsx  index.css  main.jsx
secure_baseline_updated/frontend/web/src/api/: client.js
secure_baseline_updated/frontend/web/src/components/: AttackGraph.jsx  Badges.jsx  ControlHeatmap.jsx  DriftTimeline.jsx  Header.jsx  (+4 more)
secure_baseline_updated/shared/: constants.py  schemas.py
(+62 files in other folders)
