[project]
name = "sentineldna"
version = "1.0.0"
description = "Security Control Drift & Misconfiguration Detection Across Enterprise Systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic>=2.11",
    "networkx>=3.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "google-genai>=0.1",
    "requests>=2.32",
    "huggingface_hub>=0.23",
    "python-dotenv>=1.0",
]

[tool.pyright]
extraPaths = ["backend"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
